tests/miz/fail/types/fail_type_elaboration_local_attributed_structure_reserve_evidence_gap_001.miz
definition
  let x be set;
  attr MarkedDef: x is marked means thesis;
end;

definition
  struct LocalStruct where
    field carrier -> set;
  end;
end;

reserve s for marked LocalStruct;
